feat: sanitize HTML inputs across the application to prevent XSS attacks
- Added `sanitizeHTML` utility using DOMPurify in both frontend and CMS.
- Updated `BusinessPreviewModal` and `AboutSection` components to use sanitized HTML.
- Enhanced README with error notification configuration and production deployment instructions.
- Removed package-lock.json to streamline dependency management.
- Updated package.json to include PM2 for process management.
- Added ecosystem.config.js for managing backend, website, and CMS applications with PM2.
- Included fake images for testing in the backend public directory.

--- a/MSME-Backend/.gitignore
+++ b/MSME-Backend/.gitignore
@@ -88,8 +88,10 @@ GMAIL_LIMIT_INFO.md
 # Backup files
 *.backup
 *.backup_*
+*.bak
 app.js.backup_*
 
 # Database backups
+db_backups/
 *.sql
 *.sql.gz
