--- a/MSME-CMS-Frontend/package.json
+++ b/MSME-CMS-Frontend/package.json
@@ -5,13 +5,15 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "set NODE_OPTIONS=--max-old-space-size=4096 && vite build",
+    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "serve -s dist -l $PORT"
   },
   "dependencies": {
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "dompurify": "^3.3.1",
     "file-saver": "^2.0.5",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -19,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.4.6",
     "react-router-dom": "^7.5.1",
+    "serve": "^14.2.4",
     "sweetalert2": "^11.19.1",
     "xlsx": "^0.18.5"
   },
