--- a/MSME-Website-Frontend/package.json
+++ b/MSME-Website-Frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "axios": "^1.9.0",
+    "dompurify": "^3.3.1",
     "framer-motion": "^12.11.3",
     "next": "15.3.1",
     "react": "^19.0.0",
